.. _steamshovel-release-notes:

Release Notes
=============

trunk
-----

Apr. 05, 2023 don la dieu (nega AT icecube.umd.edu)
---------------------------------------------------
IceTray Release v1.6.0

* Restore use of BUILD_${PROJECT}=OFF (#3058)
* Prettify particle-direction arrows in I3MCTree display (#3053)
* Fixes steamshovel batch scripting crashes
* Fixes crashes on quit
* Fixes crashes when selecting 3rd, 4th, or n-th frame in the time line with the mouse
* Removes the remnants of the old IceTopViewer steamshovel artist
* Documentation cleanups
* General code cleanups

Dec. 12, 2022 don la dieu (nega AT icecube.umd.edu)
---------------------------------------------------
IceTray Release v1.5.0

* Clean up macOS deployment script
* Update urls in documentation which are redirected

Jul. 29, 2022 don la dieu (nega AT icecube.umd.edu)
---------------------------------------------------
IceTray Release v1.4.0

* Drop support for Python 2
* Clean up python bindings / modules
* Minor fix to the dmg build for Mac
* Mark skippable tests as skippable or disabled (#2888)
* Remove deprecated fixed pipeline lighting, which can cause the 3D view to break with modern drivers. Addresses issue #2806.
* Clean up documentation

Feb. 21, 2022 don la dieu (nega AT icecube.umd.edu)
---------------------------------------------------
IceTray release v1.3.0

* Updates for new versions of Boost
* Addresses Qt deprecations
* Addresses compiler warnings
* Cleans up dead code
* `IceTop Widget refactoring <https://github.com/icecube/icetray/pull/2563>`_
* Documentation cleanup

Feb. 5, 2020 Alex Olivas (aolivas@umd.edu)
-------------------------------------------
Combo Release V00-00-01

* Removed more references to Qt4.

Dec. 20, 2019 Alex Olivas (aolivas@umd.edu)
-------------------------------------------
Combo Release V00-00-00

* Removed Qt4 support.

December 11, 2018, Alex Olivas (olivas@icecube.umd.edu)
------------------------------------------------------------